Dto refactoring
Might require some revisions
