# server/api/Dtos/GenreDto.cs
@@ -8,7 +8,7 @@ public class GenreDto
         Id = entity.Id;
         Name = entity.Name;
         Createdat = entity.Createdat;
-        Books = entity.Books?.Select(b => b.Id).ToList() ?? new List<string>();
+        BooksIds = entity.Books?.Select(b => b.Id).ToList() ?? new List<string>();
     }
     
     public string Id { get; set; } = null!;
@@ -16,5 +16,5 @@ public class GenreDto
     public string Name { get; set; } = null!;
 
     public DateTime? Createdat { get; set; }
-    public List<string> Books { get; set; } = new List<string>();
+    public List<string> BooksIds { get; set; } = new List<string>();
 }
